--- a/project.config.json
+++ b/project.config.json
@@ -40,6 +40,12 @@
 					"name": "登录",
 					"pathName": "pages/login/login",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "竞赛详情",
+					"pathName": "pages/index/comDetails/comDetails",
+					"query": ""
 				}
 			]
 		}
