--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -75,6 +75,18 @@
 					"id": -1,
 					"name": "nav0",
 					"pathName": "pages/index/nav0/nav0",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "nav2",
+					"pathName": "pages/index/nav2/nav2",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "nav3",
+					"pathName": "pages/index/nav3/nav3",
 					"query": ""
 				}
 			]
